<resources>
    <string name="app_name">digikala</string>
    <string name="no_internet_connection">خطا در اتصال به اینترنت</string>
    <string name="problem_response">خطا در برقراری ارتباط</string>

    <string name="list_category_menu">لیست دسته بندی محصولات</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="new_products">جدید ترین محصولات</string>
    <string name="visited_products">پر بازدید ترین محصولات</string>
    <string name="rated_products">پر امتیاز ترین محصولات</string>
    <string name="progress_product">در حال دریافت اطلاعات محصول</string>
    <string name="progress_category">در حال دریافت دسته بندی ها</string>
    <string name="product_info">مشخصات</string>
    <string name="product_description">توضیحات</string>
    <string name="no_item">محصولی یافت نشد</string>
    <string name="load_data">در حال بارگذاری اطلاعات</string>
    <string name="search">جستجو کردن محصول</string>
    <string name="all_product_list">لیست کامل</string>
    <string name="no_page">صفحه ی بیشتری یافت نشد</string>
    <string name="try_again">دوباره تلاش کن</string>
    <string name="shop_bag">سبد خرید</string>
    <string name="add_shop_successfully">محصول به سبد خرید اضافه شد.</string>
    <string name="shopping_final_sum">جمع خرید کل</string>
    <string name="submit_shopping">خرید خود را نهایی کنید</string>
    <string name="full_price">قیمت کل</string>
    <string name="final_price">قیمت نهایی</string>
    <string name="delete">حذف</string>
    <string name="price_format">  %s ریال</string>
    <string name="dialog_bag_question">آیا مایل به حذف این محصول از سبد خرید هستید؟</string>
    <string name="like_dialog_question">آیا مایل به حذف این محصول از لیست علاقه مندی ها هستید؟</string>
    <string name="liked_products_list">لیست محصولات مورد علاقه</string>
    <string name="yes">بله</string>
    <string name="no">خیر</string>
    <string name="filtering">رنگ، نوع، قیمت و…</string>
    <string name="filter">فیلتر کردن</string>
    <string name="sort">مرتب سازی</string>
    <string name="check_box_newest">جدید ترین</string>
    <string name="check_box_rated">پرفروش ترین ها</string>
    <string name="check_box_selles">پر بازدید ترین</string>
    <string name="check_box_cost_low_high">قیمت از کم به زیاد</string>
    <string name="check_box_cost_high_low">قیمت از زیاد به کم</string>
    <string name="filter_action_bar">فیلتر کردن محصول</string>
    <string name="channel_id">digikala_channel_id</string>
    <string name="channel_name">Digikala Channel</string>
    <string name="channel_description">This is notification channel for digikala</string>
    <string name="related_products">محصولات مشابه</string>
    <string name="new_products_title">محصول جدید</string>
    <string name="new_products_text">%s اضافه شد</string>
    <string name="wrong_email">لطفا ایمیل خود را به صورت صحیح وارد کنید</string>
    <string name="wrong_password">طول رمز عبور باید بیشتر از 6 کاراکتر باشد</string>
    <string name="fill_all_field">لطفا تمامی فیلد ها را پر کنید</string>
    <string name="register_successfull">ثبت نام با موفقیت انجام شد</string>
    <string name="repeat_email">ایمیل یا نام کاربری تکراری است!</string>
    <string name="problem_occur">خطایی پیش آمده</string>
    <string name="fix_email">ایمیل خود را به درستی وارد کنید!</string>
    <string name="login_successfull">با موفقیت وارد شدید</string>
    <string name="no_comment">هیچ نظری برای این محصول ثبت نشده است!</string>
    <string name="register_digikala"><u>ثبت نام در دیجی‌کالا</u></string>
    <string name="your_review">نظر شما</string>
    <string name="register_comment">ثبت نظر</string>
    <string name="publish_comment">کامنت شما منتشر شد</string>
    <string name="cant_update_comment">متاسفانه کامنت شما به روز رسانی نشد</string>
    <string name="update_comment">کامنت شما به روز رسانی شد</string>
    <string name="want_delete_comment">آیا مایل به حذف این نظر هستید؟</string>
    <string name="delete_your_comment">کامنت مورد نظر پاک شد</string>
    <string name="cant_delete_comment">متاسفانه کامنت شما پاک نشد!</string>
    <string name="profile">پروفایل</string>
    <string name="edit_info">ویرایش اطلاعات</string>
    <string name="my_orders">سفارشات من</string>
    <string name="log_out">خروج</string>
    <string name="edit_customer">ویرایش اطلاعات کاربری</string>
    <string name="enter_customer_info">لطفا اطلاعات کاربری خود را وارد کنید</string>
    <string name="register_data">ثبت اطلاعات</string>
    <string name="phone_number">شماره تلفن همراه</string>
    <string name="update_successfully">اطلاعات با موفقیت به‌روز‌رسانی شد</string>
    <string name="postal_code">کد پستی</string>
    <string name="post_address">نشانی پستی</string>
    <string name="title_address">عنوان آدرس</string>
    <string name="my_address">آدرس من</string>
    <string name="first_name">نام</string>
    <string name="last_name">نام خانوادگی</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>