<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.CustomerInfoFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:padding="8dp"
                android:clickable="true"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_margin="8dp"
                android:id="@+id/back_toolbar"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/ic_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="true" />


            <TextView
                android:textStyle="bold"
                android:maxLines="1"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:layout_centerVertical="true"
                android:text="@string/profile"
                android:layout_toLeftOf="@+id/back_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/customer_info_relative"
        android:background="#F1F1F1"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_margin="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:id="@+id/name_customer_txt"
            android:textColor="@color/black"
            android:layout_alignParentRight="true"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/customer_email"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/app_name"
            android:layout_below="@id/name_customer_txt"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_below="@id/customer_info_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:id="@+id/edit_customer_info"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:focusable="true">


            <TextView
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:text="@string/edit_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                app:srcCompat="@drawable/ic_edit"
                android:layout_width="36dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:id="@+id/customer_orders"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:focusable="true">


            <TextView
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:text="@string/my_orders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                app:srcCompat="@drawable/ic_assigment"
                android:layout_width="36dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:id="@+id/customer_user_address"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:focusable="true">


            <TextView
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:text="@string/my_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                app:srcCompat="@drawable/ic_location"
                android:layout_width="36dp"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:id="@+id/customer_log_out"
            android:background="?attr/selectableItemBackground"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical|end"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:focusable="true">


            <TextView
                android:layout_marginRight="16dp"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:text="@string/log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                app:srcCompat="@drawable/ic_exit_btn"
                android:layout_width="36dp"
                android:layout_height="match_parent"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>